[package]
name = "network-replay-server"
version = "0.1.0"
authors = ["zhukowladimir <vazhukov_1@edu.hse.ru>"]
edition = "2021"

[dependencies]
actix-web = { version = "4.1.0", features = ["openssl"] }
awc = "3.0.0"
bytes = "1"
clap = { version = "3.1.18", features = ["derive"] }
env_logger = "*"
futures = "0.3.21"
futures-util = { version = "0.3.21", default-features = false, features = ["std"] }
log = "0.4"
num_cpus = "1"
pin-project = "1"
tokio = { version = "1.19.0", features = ["full"] }
url = "2.2"
